# nitek

./: CMakeLists.txt  README.md
source/llbase/: lfqueue.h  logging.h  macros.h  mcast_socket.cpp  mcast_socket.h  mempool.h  sockets.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  threading.h  timekeeping.h
source/nitek/: CMakeLists.txt  nitek_main.cpp
source/nitek/client/data/: market_data_consumer.cpp  market_data_consumer.h
source/nitek/client/networking/: order_gateway_client.cpp  order_gateway_client.h
source/nitek/client/orders/: te_order.h  te_order_book.cpp  te_order_book.h
source/nitek/client/trading/: feature_engine.h  market_maker.cpp  market_maker.h  om_order.h  order_manager.cpp  order_manager.h  position_manager.h  risk_manager.h  trading_engine.cpp  trading_engine.h
source/nitek/common/: types.h
source/nitek/exchange/: exchange_server.h
source/nitek/exchange/data/: market_data_publisher.cpp  market_data_publisher.h  market_update.h  ome_client_request.h  ome_client_response.h  ome_market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h  types.h
source/nitek/exchange/networking/: client_request.h  client_response.h  fifo_sequencer.h  order_gateway_server.cpp  order_gateway_server.h
source/nitek/exchange/orders/: matching_engine.cpp  matching_engine.h  ome_order.h  ome_order_book.cpp  ome_order_book.h  order.h  order_book.cpp  order_book.h  order_matching_engine.cpp  order_matching_engine.h
source/utils/: CMakeLists.txt  lfqueue.h  logging.h  macros.h  mempool.h  sockets.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  threading.h  timekeeping.h
tests/: test_client_order_book.cpp  test_client_request.cpp  test_client_response.cpp  test_exchange_order_book.cpp  test_exchange_order_gateway_server.cpp  test_lfqueue.cpp  test_logging.cpp  test_main.cpp  test_market_data_consumer.cpp  test_market_data_publisher.cpp  test_mcast_socket.cpp  test_mempool.cpp  test_ome_orders.cpp  test_order_book.cpp  test_order_gateway_server.cpp  test_order_manager.cpp  test_order_matching_engine.cpp  test_sockets.cpp  test_tcp_server.cpp  test_tcp_socket.cpp  test_threads.cpp  test_trading_algorithms.cpp  test_trading_engine.cpp  test_trading_positions.cpp
